<resources>
    <string name="app_name" translatable="false">Porter</string>
    <string name="home_status_service_is_running">%1$s is running</string>
    <string name="home_status_service_not_running">%1$s is not running</string>
    <string name="home_adb_title"><![CDATA[Start by connecting to a computer]]></string>
    <string name="home_adb_description"><![CDATA[For devices without root, you need to use adb to start Porter (requires computer connection). This process needs to be repeated every time the device is restarted. Please <b><a href=\"%1$s\">read the help</a></b>.]]></string>
    <string name="home_adb_button_view_command">View command</string>
    <string name="home_adb_dialog_view_command_message"><![CDATA[<font face="monospace">%1$s</font><br><br>* There are some other considerations, please confirm that you have read the help first.]]></string>
    <string name="home_adb_dialog_view_command_button_send">Send</string>
    <string name="home_wireless_adb_title"><![CDATA[Start via Wireless debugging]]></string>
    <string name="home_wireless_adb_description"><![CDATA[On Android 11 or above, you can enable Wireless debugging and start Porter directly from your device, without connecting to a computer.<p>Please view the step-by-step guide first.]]></string>
    <string name="home_wireless_adb_description_pre_11"><![CDATA[Before Android 11, connecting to a computer is required to enable Wireless debugging.]]></string>
    <string name="home_wireless_adb_view_guide_button">Step-by-step guide</string>
    <string name="dialog_adb_discovery">Searching for wireless debugging service</string>
    <string name="dialog_adb_discovery_message">Please enable \"Wireless debugging\" in \"Developer options\". \"Wireless debugging\" is automatically disabled when network changes.\n\nNote, do not disable \"Developer options\" or \"USB debugging\", or Porter will be stopped.</string>
    <string name="dialog_adb_discovery_message_toggle_wireless_debugging">Please try to disable and enable \"Wireless debugging\" if it keeps searching.</string>
    <string name="dialog_adb_port">Port</string>
    <string name="adb_pairing">Pairing</string>
    <string name="dialog_adb_pairing_title">Pair with device</string>
    <string name="dialog_adb_pairing_discovery">Searching for pairing service</string>
    <string name="dialog_adb_pairing_paring_code">Pairing code</string>
    <string name="paring_code_is_wrong">Pairing code is wrong.</string>
    <string name="cannot_connect_port">Can\'t connect to wireless debugging service.\n\nPlease ensure that Porter is whitelisted in all firewall, ad-block, VPN, or similar apps that can restrict network access.</string>
    <string name="dialog_wireless_adb_not_enabled">Wireless debugging is not enabled.\nNote, before Android 11, to enable wireless debugging, computer connection is a must.</string>
    <string name="dialog_usb_debugging_not_enabled">USB debugging is not enabled.\nPlease enable it in \"Developer Options\".</string>
    <string name="dialog_adb_pairing_accessibility_permission">On Android 14, installing/updating Porter with the Package Installer revokes the ^1 permission, which is required to enable the accessibility service for pairing.\n\nTo grant it, run the following ADB command:\n\n^2\n\nAfter running the command, you may continue with the pairing process.\n\nNote: you can bypass this by installing/updating Porter with ADB.</string>
    <string name="dialog_adb_pairing_accessibility_enable">Please enable the accessibility service to start the pairing process. This allows Porter to detect the pairing code.\n\nThe accessibility service will turn off after the pairing attempt, or if no code is found within one minute. Porter will show the result and let you retry.</string>
    <string name="dialog_adb_pairing_accessibility_navigate">Please start pairing by performing the following steps:\n- Navigate to \"Developer Options\"\n- Enable \"USB debugging\" and \"Wireless debugging\"\n- Tap the left side of \"Wireless debugging\"\n- Tap \"Pair device with pairing code.\" Porter will automatically detect the pairing code.</string>
    <string name="adb_pairing_requires_multi_window">Please enter split-screen (multi-window) mode first.</string>
    <string name="adb_pairing_requires_multi_window_reason">The system requires the pairing dialog to always be visible. Using split-screen mode is the only way to let this app and the system dialog be visible at the same time.</string>
    <string name="adb_error_key_store">Unable to generate key for wireless debugging.\nThis may be because the KeyStore mechanism of this device is broken.</string>
    <string name="adb_pair_required_title">Pairing required</string>
    <string name="adb_pair_required">Wireless debugging is on, but it does not recognize Porter. Porter has to be paired with wireless debugging on this device before it can start this way. That is needed once, and again whenever the pairing is lost, for example after Porter\'s app data is cleared or Porter is removed from the list of paired devices.\n\nChoose Pairing and follow the steps, then start Porter again.</string>
    <string name="enable">Enable</string>
    <string name="development_settings">Developer options</string>
    <string name="notification_settings">Notification options</string>
    <string name="adb_pairing_tutorial_content_notification">A notification from Porter will help you complete the pairing.</string>
    <string name="adb_pairing_tutorial_content_steps">Navigate to \"Developer Options\", then enable \"USB debugging\" and \"Wireless debugging\".</string>
    <string name="adb_pairing_tutorial_content_enter_pairing_code">Tap the left side of \"Wireless debugging\", then tap \"Pair device with pairing code.\" Enter the code in the notification to complete pairing.</string>
    <string name="adb_pairing_tutorial_content_notification_blocked">The pairing process needs you to interact with a notification from Porter. Please allow Porter to post notifications.</string>
    <string name="adb_pairing_tutorial_content_miui">MIUI users may need to switch notification style to \"Android\" from \"Notification\" - \"Notification shade\" in system settings.</string>
    <string name="adb_pairing_tutorial_content_miui_2">Otherwise, you may not able to enter the pairing code from the notification.</string>
    <string name="adb_pairing_tutorial_content_finish">Go back to Porter and start Porter.</string>
    <string name="adb_pairing_tutorial_content_network">Porter needs to access the local network. It is controlled by the network permission.</string>
    <string name="adb_pairing_tutorial_content_network_limation_not_foreground">Some systems (such as MIUI) disallow apps to access the network when they are not visible, even if the app uses a foreground service. Please disable battery optimization features for Porter on such systems.</string>
    <string name="home_root_title"><![CDATA[Start (for rooted devices)]]></string>
    <string name="home_root_description"><![CDATA[If you use Magisk, %1$s is another option. Apps need explicit support for %2$s.]]></string>
    <string name="home_root_button_start">Start</string>
    <string name="home_app_management_title">Application management</string>
    <plurals name="home_app_management_authorized_apps_count">
        <item quantity="one"><![CDATA[Authorized %d application]]></item>
        <item quantity="other"><![CDATA[Authorized %d applications]]></item>
    </plurals>
    <string name="home_app_management_view_authorized_apps"><![CDATA[Tap to manage authorized apps]]></string>
    <string name="home_app_management_empty">Apps that have requested or declared the Porter permission will show here.</string>
    <string name="home_automation_title">Control Porter with automation apps</string>
    <string name="home_automation_bottom_sheet_intents">Intents</string>
    <string name="home_automation_bottom_sheet_label_action">Action</string>
    <string name="home_automation_bottom_sheet_label_package">Package</string>
    <string name="home_automation_bottom_sheet_label_target">Target</string>
    <string name="home_automation_bottom_sheet_label_extras">Extras</string>
    <string name="home_automation_regenerate_token">Regenerate token?</string>
    <string name="home_automation_regenerate_token_message">You will need to reconfigure your intents with the new token.</string>
    <string name="home_dialog_reboot_required_title">Reboot required</string>
    <string name="home_dialog_reboot_required_message">A device reboot is required for Porter to work properly. To continue, please reboot your device.</string>
    <string name="home_dialog_duplicate_app_detected_title">Duplicate app detected</string>
    <string name="home_dialog_duplicate_app_detected_message">Another version of this app is installed on your device. To continue, please uninstall all duplicate versions and reboot your device.</string>
    <string name="home_dialog_button_exit">Exit</string>
    <string name="app_management_dialog_adb_is_limited_title">The permission of adb is limited</string>
    <string name="app_management_dialog_adb_is_limited_message"><![CDATA[It\'s highly possible that your device manufacturer limits the permission of adb.<p>There may be a solution for your system in <b><a href=\"%1$s\">this document</a></b>.]]></string>
    <string name="app_management_item_summary_requires_root">* requires Porter runs with root</string>
    <string name="app_management_toggle_all">Toggle all</string>
    <string name="home_terminal_title">Use Porter in terminal apps</string>
    <string name="home_terminal_description">Run shell commands in terminal apps through Porter</string>
    <string name="terminal_tutorial_miui">Users have reported that MIUI breaks the Storage Access Framework, which is used by the export function.</string>
    <string name="terminal_tutorial_miui_2">If you are using MIUI, you may have to extract the file from the assets folder in Porter\'s APK.</string>
    <string name="terminal_tutorial_1">Export the files to a new folder.</string>
    <string name="terminal_tutorial_1_description">Two files will be exported: %1$s and %2$s. If the files already exist in the selected folder, they will be deleted.</string>
    <string name="terminal_export_files">Export files</string>
    <string name="settings_start_on_boot">Start on boot</string>
    <string name="settings_watchdog">Watchdog</string>
    <string name="settings_watchdog_summary">Automatically restart Porter if it crashes</string>
    <string name="settings_tcp_port">TCP port</string>
    <string name="settings_user_interface">Appearance</string>
    <string name="settings_support">Support</string>
    <string name="porter_theme_mode">Theme mode</string>
    <string name="porter_theme_style">Theme style</string>
    <string name="porter_theme_color">Theme color</string>
    <string name="porter_tools">Tools</string>
    <string name="porter_developer_guide">Developer guide</string>
    <string name="porter_support_title">Help &amp; support</string>
    <string name="porter_support_summary">Guides, community, contact and debug logs</string>
    <string name="porter_contact_summary">Ask a question, report a problem or suggest a feature.</string>
    <string name="porter_debug_start">Record debug log</string>
    <string name="porter_contact_category">Category</string>
    <string name="porter_contact_description">What happened? How can we help?</string>
    <string name="porter_contact_expected">What did you expect to happen?</string>
    <string name="porter_contact_attachment">Debug log attachment</string>
    <string name="porter_contact_privacy">Your email draft includes Porter and device details, plus the log you select. Check it before sending. Nothing is sent automatically.</string>
    <string name="porter_contact_send">Open email draft</string>
</resources>