<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Empty preference to fix issue with Android TVs not being able to re-focus on appbar if category is first item -->
    <Preference
        android:key="empty"
        style="@style/Preference.Rikka.Material3.Empty" />

    <PreferenceCategory
        android:key="category_behavior"
        android:title="@string/settings_behavior">

        <SwitchPreferenceCompat
            android:key="start_on_boot"
            android:title="@string/settings_start_on_boot" />

        <SwitchPreferenceCompat
            android:key="watchdog"
            android:summary="@string/settings_watchdog_summary"
            android:title="@string/settings_watchdog" />

        <EditTextPreference
            android:key="tcp_port"
            android:title="@string/settings_tcp_port"
            android:inputType="number" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_user_interface">
        <moe.shizuku.manager.settings.IntegerSimpleMenuPreference
            android:key="night_mode"
            android:entries="@array/night_mode"
            android:entryValues="@array/night_mode_value"
            android:summary="%s"
            android:title="@string/porter_theme_mode" />
        <ListPreference
            android:key="theme_style"
            android:entries="@array/porter_theme_styles"
            android:entryValues="@array/porter_theme_style_values"
            android:title="@string/porter_theme_style"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:key="theme_color"
            android:entries="@array/porter_theme_colors"
            android:entryValues="@array/porter_theme_color_values"
            android:title="@string/porter_theme_color"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/porter_tools">
        <Preference android:key="terminal" android:title="@string/home_terminal_title"
            android:summary="@string/home_terminal_description" />
        <Preference android:key="automation" android:title="@string/home_automation_title" />
        <Preference android:key="developer_guide" android:title="@string/porter_developer_guide" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_support">
        <Preference android:key="support" android:title="@string/porter_support_title"
            android:summary="@string/porter_support_summary" />
        <Preference android:key="about" android:title="@string/action_about" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_advanced"
        android:title="@string/settings_advanced">

        <SwitchPreferenceCompat
            android:key="legacy_pairing"
            android:summary="@string/settings_legacy_pairing_summary"
            android:title="@string/settings_legacy_pairing" />

    </PreferenceCategory>

</PreferenceScreen>
